--- a/Day_4.ipynb
+++ b/Day_4.ipynb
@@ -35,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Summary of challenge: The Day 4 input contains ranges of numbers stored as letters which represent the range of a cleaning assignment (also referred to as cleaning task in this notebook). Each line of text correspond to two cleaning tasks belonging to two paired elves. In part 1, we need to calculate the number of times the cleaning task (range of numbers) completely overlaps between the two paired elves. In part 2, we need to calculate the number of times the cleaning task (range of numbers) has any overlap (e.g., overlap is just a short range) between the two paired elves."
+        "Summary of challenge: The Day 4 input contains ranges of numbers (stored as letters) which represent the range of a cleaning assignment (also referred to as cleaning task in this notebook). Each line of text correspond to two cleaning tasks belonging to two paired elves. In part 1, we need to calculate the number of times the cleaning task (range of numbers) completely overlaps between the two paired elves. In part 2, we need to calculate the number of times the cleaning task (range of numbers) has any overlap (e.g., overlap is just a short range) between the two paired elves."
       ],
       "metadata": {
         "id": "LXOHMM_Sayjf"
