--- a/Day_1.ipynb
+++ b/Day_1.ipynb
@@ -36,7 +36,7 @@
       "cell_type": "markdown",
       "source": [
         "Summary of challenge: \n",
-        "The Day 1 input contains a series of numbers which represent the number of calories each elf is carrying. Each line of text correspond to one elf. In part 1, we need to calculate the highest number of calories that an elf is carrying. In part 2, we need to calculate the sum of the top 3 highest numbers of calories that elfs are carrying."
+        "The Day 1 input contains a series of numbers which represent the number of calories each elf is carrying. Each line of text correspond to one elf. In part 1, we need to calculate the highest number of calories that an elf is carrying. In part 2, we need to calculate the sum of the top 3 highest numbers of calories that elves are carrying."
       ],
       "metadata": {
         "id": "JvpQHhICjPCL"
@@ -1021,7 +1021,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "What is the sum of the top 3 highest numbers of calories that elfs are carrying?"
+        "What is the sum of the top 3 highest numbers of calories that elves are carrying?"
       ],
       "metadata": {
         "id": "82xo4-WJja5C"
@@ -1210,7 +1210,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# the sum of the top 3 highest numbers of calories that elfs are carrying is 207456.\n",
+        "# the sum of the top 3 highest numbers of calories that elves are carrying is 207456.\n",
         "\n",
         "three_maxes = 69108.0 + 69171.0 + 69177.0\n",
         "three_maxes"
