--- a/Day_3.ipynb
+++ b/Day_3.ipynb
@@ -35,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Summary of challenge: The Day 3 input contains a series of letters which represent items in a rucksack. Each line of text correspond to a rucksack carried by one elf, but each rucksack can be divided into 2 compartments containing an equal amount of items (letters). In part 1, we need to calculate the total priority score of letters that are the same in both rucksack compartments. In part 2, we need to seperate the elfs into groups of 3 (1 group - 3 rucksacks) and calculate the total priority score based on the letter that occurs in all 3 rucksacks."
+        "Summary of challenge: The Day 3 input contains a series of letters which represent items in a rucksack. Each line of text correspond to a rucksack carried by one elf, but each rucksack can be divided into 2 compartments containing an equal amount of items (letters). In part 1, we need to calculate the total priority score of letters that are the same in both rucksack compartments. In part 2, we need to seperate the elves into groups of 3 (1 group - 3 rucksacks) and calculate the total priority score based on the letter that occurs in all 3 rucksacks."
       ],
       "metadata": {
         "id": "QsOQGW2k5QTk"
@@ -629,7 +629,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "What is the total priority score based on the letter that occurs in all 3 rucksacks of a group of elfs?"
+        "What is the total priority score based on the letter that occurs in all 3 rucksacks of a group of elves?"
       ],
       "metadata": {
         "id": "7SiUN-07JBpk"
@@ -638,7 +638,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Creating a loop that splits elfs into groups of 3\n",
+        "# Creating a loop that splits elves into groups of 3\n",
         "\n",
         "groups=[]\n",
         "for i in range(0,300,3):\n",
@@ -1009,7 +1009,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Creating a loop that determines the badge of each group of elfs\n",
+        "# Creating a loop that determines the badge of each group of elves\n",
         "# The badge is the letter that is contained within the rucksack of every elf in the group\n",
         "\n",
         "badge=[]\n",
