--- a/Day_5.ipynb
+++ b/Day_5.ipynb
@@ -35,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Summary of challenge: The Day 5 contains an in input that features letters referring to crates and letters referring to a procedure for handling crates. I seperated the input into two different Day5_inputs - one for crates and one for the procedure. Day5_input_procedure contains commands for handling the crates. Each line corresponds to one command. Day5_input_crates represents 9 crates contains various letters. Each line corresponds to letters contained at that position in other crates (see below). In part 1, we need to determine what crate ends up on top of each stack after the crates are moved one by one according to the procedure. In part 2, we need to determine what crate ends up on top of each stack after the crates are moved simultaneously according to the procedure."
+        "Summary of challenge: The Day 5 challenge contains an in input that features letters referring to crates and letters referring to a procedure for handling crates. I seperated the input into two different Day5_inputs - one for crates and one for the procedure. Day5_input_procedure contains commands for handling the crates. Each line corresponds to one command. Day5_input_crates represents 9 crates and contains various letters. Each line corresponds to letters contained at that position in other crates (see below). In part 1, we need to determine what crate ends up on top of each stack after the crates are moved one by one according to the procedure. In part 2, we need to determine what crate ends up on top of each stack after the crates are moved simultaneously according to the procedure."
       ],
       "metadata": {
         "id": "ErrdJXUMxH3q"
